--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-Thumbs.db
+**/Thumbs.db**
 assets/Thumbs.db
 assets/img/lolpics/Thumbs.db
 assets/img/portfolio/Thumbs.db
-assets/Thumbs.db
 assets/img/Thumbs.db
